[gd_scene load_steps=5 format=3 uid="uid://cjvvi1wm1eukc"]

[ext_resource type="Texture2D" uid="uid://cn1prcajk40h5" path="res://Sprites/Squares/512x512GridFeathered.png" id="1_dspwi"]
[ext_resource type="Script" path="res://Entities/Grid/GridUI.gd" id="2_qoi4s"]
[ext_resource type="Texture2D" uid="uid://nytttjt5wdst" path="res://Sprites/Squares/128x128-White.png" id="3_sivi8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2m26"]
size = Vector2(128, 128)

[node name="GridUI" type="Sprite2D"]
texture = ExtResource("1_dspwi")
script = ExtResource("2_qoi4s")

[node name="HighlightSquare" type="Sprite2D" parent="."]
texture = ExtResource("3_sivi8")
centered = false

[node name="Area2D" type="Area2D" parent="HighlightSquare"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighlightSquare/Area2D"]
shape = SubResource("RectangleShape2D_y2m26")

[connection signal="body_entered" from="HighlightSquare/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="HighlightSquare/Area2D" to="." method="_on_area_2d_body_exited"]
